# mongodb_watch_python_example

./: README.md  pyproject.toml
app/: main.py
app/tests/: test_main.py
